Galleon
-------

Version 2.5.4:
----------------------
* Fix ToGo looping bug on null recording date (1811137)
* Added user-selectable range for local radar image (100, 300, 600 miles) in Weather
* (incomplete) auto-subdirectory publishing for GoBack, avoids the need to do it yourself and
  also avoids bugs in TiVo folder navigation


Version 2.5.3:
----------------------
* Update JmDNS package to 1.0 (not using JmDNS from
  hme-host-sample-1.4.jar anymore); seems to help on Mac OS X 10.5
* Added TiVo name to detail screen in ToGo app
* Updated weather forecast parsing to handle more cases
* Fixed local radar after change on weather source web pages
* Update help URLs to point at content now on sourceforge.net
* Fixed iPhoto album parser to clean out old albums during library
  update.



Version 2.5.2:
----------------------
* Fixed bug with GoBack truncating files after 2GB had been transferred.
* Fixed another CPU-spinning bug in the screen saver

Version 2.5.1:
----------------------
* Fixed a screen saver bug--it would consume all your CPU time on the PC
* Updated Linux install Makefile to work in more cases/on more distributions

Version 2.5.0:
----------------------
* Added iPhoto album display capability into Photos application
* Increased album artwork size in music players (HD)
* Fixed built-in Photos application to lay out the grid better for HD.
* Fixed JPG image tag reading for Photos
* Added a new HD Photos plugin that will download, install and run the TiVo Desktop hdphotos 
    HME application integrated into Galleon similar to what it does for TiVo Desktop. 
    (you must open TCP port 7111 on your firewall)
* Reimplemented skin resource loading so they don't use as much memory and cpu
* Added scalable backgrounds that fit the screen in HD mode for pictures and music
* Fixed the HD playbar in the music app so it draws properly
* Fixed layout on music player screen when in HD mode
* Increased font size on music app in HD mode for all screens